--- a/habitApp/Views/HabitTableViewCell.xib
+++ b/habitApp/Views/HabitTableViewCell.xib
@@ -9,27 +9,37 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="habit cell" id="KGk-i7-Jjw" customClass="HabitTableViewCell" customModule="habitApp" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="HabitCell" id="KGk-i7-Jjw" customClass="HabitTableViewCell" customModule="habitApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="293.66666666666669" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" fixedFrame="YES" spacing="64" translatesAutoresizingMaskIntoConstraints="NO" id="alH-Fi-tB5">
-                        <rect key="frame" x="0.0" y="0.0" width="260.66666666666669" height="50"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" spacing="45" translatesAutoresizingMaskIntoConstraints="NO" id="alH-Fi-tB5">
+                        <rect key="frame" x="0.0" y="0.0" width="293.66666666666669" height="44"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7Jz-DJ-diO">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7Jz-DJ-diO">
+                                <rect key="frame" x="0.0" y="0.0" width="82.333333333333329" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="WQy-pj-rW2"/>
+                                </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f7I-Yn-OoW">
-                                <rect key="frame" x="113.99999999999999" y="0.0" width="41.333333333333329" height="50"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mqh-ny-YMQ">
+                                <rect key="frame" x="127.33333333333333" y="0.0" width="41.333333333333329" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="LBf-5F-qyi"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mqh-ny-YMQ">
-                                <rect key="frame" x="219.33333333333334" y="0.0" width="41.333333333333343" height="50"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f7I-Yn-OoW">
+                                <rect key="frame" x="213.66666666666666" y="4" width="79.999999999999972" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="6Tr-Qm-Zjb"/>
+                                    <constraint firstAttribute="width" constant="80" id="hxZ-Lx-F5Q"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -37,6 +47,11 @@
                         </subviews>
                     </stackView>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="alH-Fi-tB5" secondAttribute="trailing" id="Oac-8g-UTz"/>
+                    <constraint firstItem="alH-Fi-tB5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-16" id="T4v-Ve-Spe"/>
+                    <constraint firstAttribute="bottom" secondItem="alH-Fi-tB5" secondAttribute="bottom" id="lmu-hc-NMw"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
@@ -46,10 +61,5 @@
             </connections>
             <point key="canvasLocation" x="16.793893129770993" y="20.422535211267608"/>
         </tableViewCell>
-        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="f48-tf-6Bt">
-            <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <point key="canvasLocation" x="-64" y="63"/>
-        </imageView>
     </objects>
 </document>
